deploy/overlays/develop/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jifelog-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - dev.jifelog.com
      secretName: tls-secret-dev
  rules:
    - host: dev.jifelog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jifelog-app
                port:
                  number: 80
